# jupyter_process_manager

./: .coveragerc  .gitignore  .travis.yml  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst
docs/src/: index.html
docs/src/jupyter_process_manager/: class_one_process.html  class_processes_manager.html  function_wrapper.html  index.html  other.html  test_functions.html  widget.html
src/jupyter_process_manager/: __init__.py  class_one_process.py  class_processes_manager.py  function_wrapper.py  other.py  skeleton.py  test_functions.py  widget.py
src/jupyter_process_manager/gui/: layouts.py  widget.py
tests/: conftest.py  test_skeleton.py  test_widget_creation.py
